<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout_image_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.rdm.android.learningwithnationalparks.fragments.ImageDetailFragment"
    tools:ignore="MergeRootFrame">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height_image_detail"
        android:elevation="@dimen/appbar_elevation"
        app:layout_collapseMode="pin"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:expandedTitleMarginStart="8dp"
            app:expandedTitleMarginEnd="4dp"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title">

            <android.support.v7.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="@dimen/toolbar_elevation"
                app:layout_collapseMode="pin"
                android:layout_gravity="top"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <ImageView
                android:id="@+id/image_detail_photo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_bar_height_image_detail"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                android:adjustViewBounds="true"
                app:layout_collapseMode="pin"
                app:layout_collapseParallaxMultiplier="0.9"
                android:transitionName="@string/transition_photo"
                android:contentDescription="@string/flickr_image" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/item_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/image_description"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
                android:layout_marginRight="@dimen/detail_inner_horiz_margin"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:autoLink="web"
                android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
                android:textColor="#455A64"
                android:textSize="@dimen/detail_body_text_size" />

            <TextView
                android:id="@+id/link_to_flickr_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
                android:layout_marginRight="@dimen/detail_inner_horiz_margin"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="16dp"
                android:textColor="#455A64"
                android:autoLink="web"
                android:textSize="@dimen/detail_body_text_size"
                android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
                tools:text="National Parks Service Flicker home page"
                android:text="@string/link_to_flickr_page" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_share"
        android:stateListAnimator="@animator/fab_state_list_anim"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="center_vertical|start"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        app:rippleColor="@color/category_lessons"
        app:backgroundTint="@color/category_images"
        app:layout_anchor="@+id/app_bar"
        android:layout_marginEnd="16dp"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_share"
        android:contentDescription="@string/fab_share" />

</android.support.design.widget.CoordinatorLayout>
